@@ -1,3 +1,7 @@
+2007-04-03  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclExecute.c: INST_INVOKE optimisation [Patch 1693802] 
+	
 2007-04-03  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclNamesp.c:	Revised ErrorCodeRead and ErrorInfoRead
